[package]
name = "rocket-basicauth"
description = "A high-level basic access authentication request guard for Rocket.rs"
version = "2.1.1"
readme = "README.md"
license = "MIT"
repository = "https://github.com/owez/rocket-basicauth"
keywords = ["web", "rocket", "auth", "basic-auth", "authentication"]
authors = ["Owez <root@ogriffiths.com>"]
edition = "2018"

[dependencies.rocket]
git = "https://github.com/SergioBenitez/Rocket"
branch = "v0.5-rc"

[dependencies]
base64 = "0.13"
log = { version = "0.4", optional = true }

[features]
default = ["log"]
